# sql-agent

./: .env.example  .gitignore  AGENTS.MD  README.md  pyproject.toml  requirements.txt
app/: config.py  db.py  server.py  sessions.py  test.ipynb  tracing.py
app/agent/: core.py  sql_tools.py  tools.py
app/ui/static/: app.js  index.html  style.css
scripts/: dev.ps1  dev.sh  seed_db.py
workspace/: agent.db  customer_orders.csv  customer_orders.json  customer_orders.txt  revenue_by_category_chart.md  sessions.json  somedata.txt  top_customers_by_revenue.csv  top_products_by_revenue.csv
